# PAMGuard-C-port

./: .dockerignore  .gitignore  Dockerfile.engine  README.md  docker-compose.engine.yml
cpp-engine/: CMakeLists.txt
cpp-engine/include/pamguard/core/: AnalysisConfig.h  AnalysisSession.h  AudioFrame.h  GroupedSource.h  SessionManager.h
cpp-engine/include/pamguard/detectors/: BasicClickClassifier.h  ClickAngleVeto.h  ClickDetectorEngine.h  ClickFeatureExtractor.h  ClickTrainTracker.h  ConnectedRegionTracker.h  CtChi2Classifier.h  CtClassifiers.h  CtSpectrumTemplates.h  CtTrainSpectrum.h  FftNoiseMonitor.h  IshmaelDetector.h  LtsaMonitor.h  MatchFiltDetector.h  MatchedTemplateClassifier.h  MhtIdiChi2.h  MhtKernel.h  MhtSimpleChi2Vars.h  NoiseBandMonitor.h  SgramCorrDetector.h  SimpleEchoDetector.h  SpectrogramNoiseReducer.h  SpectrumBackground.h  StandardMhtChi2.h  SweepClickClassifier.h  WhistleDetectionGrouper.h  WhistlePeakDetector.h
cpp-engine/include/pamguard/dsp/: ComplexSpectrum.h  IirFilter.h  JtFft.h  RealFft.h  SpectrogramEngine.h  WindowFunction.h
cpp-engine/include/pamguard/io/: WavReader.h
cpp-engine/include/pamguard/localisation/: ArrayShape.h  BearingLocaliserSelector.h  CorrelationDelayEstimator.h  DelayGroupEstimator.h  FarFieldBearingLocaliser.h  JamaMatrix.h  LsqBearingLocaliser.h  MlGridBearingLocaliser.h  PairBearingLocaliser.h  StreamerOrientation.h  WhistleDelayEstimator.h  WorldVectors.h
cpp-engine/scripts/: build-msvc.ps1  service-job-smoke.ps1  service-load-smoke.ps1  service-smoke.ps1  service-throughput-bench.ps1  test-msvc.ps1
cpp-engine/src/core/: AnalysisSession.cpp  GroupedSource.cpp  SessionManager.cpp
cpp-engine/src/detectors/: BasicClickClassifier.cpp  ClickAngleVeto.cpp  ClickDetectorEngine.cpp  ClickFeatureExtractor.cpp  ClickTrainTracker.cpp  ConnectedRegionTracker.cpp  CtTrainSpectrum.cpp  FftNoiseMonitor.cpp  IshmaelDetector.cpp  LtsaMonitor.cpp  MatchFiltDetector.cpp  MatchedTemplateClassifier.cpp  MhtIdiChi2.cpp  MhtSimpleChi2Vars.cpp  NoiseBandMonitor.cpp  SgramCorrDetector.cpp  SpectrogramNoiseReducer.cpp  SpectrumBackground.cpp  StandardMhtChi2.cpp  SweepClickClassifier.cpp  WhistlePeakDetector.cpp
cpp-engine/src/dsp/: IirFilter.cpp  JtFft.cpp  RealFft.cpp  SpectrogramEngine.cpp  WindowFunction.cpp
cpp-engine/src/io/: WavReader.cpp
cpp-engine/src/localisation/: ArrayShape.cpp  BearingLocaliserSelector.cpp  CorrelationDelayEstimator.cpp  DelayGroupEstimator.cpp  FarFieldBearingLocaliser.cpp  JamaMatrix.cpp  LsqBearingLocaliser.cpp  MlGridBearingLocaliser.cpp  PairBearingLocaliser.cpp  StreamerOrientation.cpp  WhistleDelayEstimator.cpp  WorldVectors.cpp
cpp-engine/tests/: README.md  parity-fixture.schema.json  window-parity-notes.md
cpp-engine/tests/fixtures/click/: iir-filter.csv  simple-echo.csv
cpp-engine/tests/fixtures/click-angle-veto/: angle-veto.csv
cpp-engine/tests/fixtures/click-classifier/: basic-click-classifier.csv  sweep-click-classifier.csv  sweep-click-defaults.csv
cpp-engine/tests/fixtures/click-feature/: basic-features.csv
cpp-engine/tests/fixtures/click-train/: ct-chi2-classifier.csv  idi-stats.csv  mht-bearing-chi2.csv  mht-idi-chi2.csv  mht-kernel.csv  mht-simple-chi2-vars.csv  mht-time-delay-chi2.csv  spectrum-templates.csv  standard-mht-chi2.csv
cpp-engine/tests/fixtures/click-trigger/: basic-2ch-threshold10.csv  boundary-transient-chunk128.csv  double-merge-minsep16.csv  double-split-minsep8.csv  long-maxlen64.csv  single-channel-min1.csv  single-channel-min2-suppressed.csv  single-threshold6.csv
cpp-engine/tests/fixtures/fft/: hann-1024.csv  hann-8.csv
cpp-engine/tests/fixtures/fft-noise/: fft-noise.csv
cpp-engine/tests/fixtures/grouped-source/: grouped-source.csv
cpp-engine/tests/fixtures/localisation/: array-shape.csv  correlation-delay-basic.csv  delay-group-3ch-basic.csv  delay-group-3ch-combined.csv  delay-group-3ch-envelope.csv  delay-group-3ch-filter.csv  delay-group-3ch-leading.csv  delay-group-3ch-restricted.csv  delay-group-3ch-upsample.csv  earth-vector.csv  lsq-bearing.csv  ml-grid-bearing.csv  ml-line-bearing.csv  pair-bearing.csv  streamer-orientation.csv  world-vector.csv
cpp-engine/tests/fixtures/ltsa/: ltsa.csv
cpp-engine/tests/fixtures/match-filt/: match-filt.csv
cpp-engine/tests/fixtures/matched-template/: matched-template.csv
cpp-engine/tests/fixtures/noise/: noise-bands.csv
cpp-engine/tests/fixtures/pamfft-frame/: hann-8-hop-4-sr-8000-chunk-16.csv
cpp-engine/tests/fixtures/project-import/: sample-project-session.json  sample-project.psfx
cpp-engine/tests/fixtures/sgram-corr/: sgram-corr.csv
cpp-engine/tests/fixtures/spectrum-background/: spectrum-background.csv
cpp-engine/tools/: array_shape_fixture_check.cpp  bearing_localiser_selector_check.cpp  click_angle_veto_fixture_check.cpp  click_basic_classifier_fixture_check.cpp  click_detector_settings_check.cpp  click_feature_fixture_check.cpp  click_sweep_classifier_fixture_check.cpp  click_train_bearing_summary_check.cpp  click_train_idi_fixture_check.cpp  click_train_localisation_summary_check.cpp  click_train_tracker_check.cpp  click_trigger_fixture_check.cpp  click_wav_parity_cli.cpp  connected_region_discard_fixture_check.cpp  connected_region_fixture_check.cpp  connected_region_fragment_fixture_check.cpp  connected_region_rejoin_fixture_check.cpp  connected_region_stub_fixture_check.cpp  correlation_delay_fixture_check.cpp  ct_chi2_classifier_check.cpp  ct_classifiers_check.cpp  ct_spectrum_template_check.cpp  delay_group_fixture_check.cpp  far_field_bearing_check.cpp  ffmpeg_stream_ingest.cpp  fft_fixture_check.cpp  fft_noise_fixture_check.cpp  grouped_source_fixture_check.cpp  iir_filter_fixture_check.cpp  ishmael_fixture_check.cpp  lsq_bearing_fixture_check.cpp  ltsa_fixture_check.cpp  match_filt_fixture_check.cpp  matched_template_fixture_check.cpp  mht_bearing_chi2_fixture_check.cpp  mht_idi_chi2_fixture_check.cpp  mht_kernel_fixture_check.cpp  mht_simple_chi2_vars_fixture_check.cpp  mht_time_delay_chi2_fixture_check.cpp  ml_grid_bearing_fixture_check.cpp  (+24 more)
platform/: openapi.yaml  (+4 more)
(+380 files in other folders)
